--- a/shopping-list-application-service/pom.xml
+++ b/shopping-list-application-service/pom.xml
@@ -22,6 +22,19 @@
             <groupId>com.mehrdad.falahati</groupId>
             <artifactId>shopping-list-domain</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
