--- a/shopping-list-infrastructure/shopping-list-dataaccess/pom.xml
+++ b/shopping-list-infrastructure/shopping-list-dataaccess/pom.xml
@@ -22,5 +22,14 @@
             <groupId>com.mehrdad.falahati</groupId>
             <artifactId>shopping-list-application-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
