--- a/shopping-list-infrastructure/shopping-list-application/pom.xml
+++ b/shopping-list-infrastructure/shopping-list-application/pom.xml
@@ -22,5 +22,13 @@
             <groupId>com.mehrdad.falahati</groupId>
             <artifactId>shopping-list-application-service</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
